# rust-music-player

./: .gitignore  Cargo.toml
src/: browser_list.rs  main.rs  playlist.rs  queue.rs  screen_welcome.rs  song.rs  test_ui.rs
