[package]
name = "rust-music-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.5.0"
color-eyre = "=0.6.2"
crossterm = "0.27.0"
dirs = "5.0.1"
home = "0.5.9"
metadata = "0.1.8"
permutation = "0.4.1"
ratatui = "0.26.1"
rodio = "0.17.3"
